# high-density-a01

./: .gitignore  README.md  package.json  vite.config.ts
.github/workflows/: bun-pver-release.yml
fixtures/dataset01/: sample001-wasm.fixture.tsx  sample001.fixture.tsx
lib/: gridToAffineTransform.ts  index.ts  types.ts
lib/HighDensitySolverA01/: HighDensitySolverA01.ts
lib/HighDensitySolverA01WasmEngine/: HighDensitySolverA01WasmEngine.ts
lib/HighDensitySolverA03/: HighDensitySolverA03.ts
tests/dataset01/sample001/: sample001.json  sample001.test.ts
tests/repros/repro02/: repro02.json
tests/repros/repro03/: repro03.json
tests/repros/repro04/: repro04.json
tests/wasm/dataset01/: sample001.test.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
