[package]
name = "highdensity_solver_a01_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
ordered-float = "4"
indexmap = { version = "2", features = ["serde"] }
smallvec = "1"

# Optional (recommended for dev builds)
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = []
console_error_panic_hook = ["dep:console_error_panic_hook"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
